--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,10 @@ h1 {
     font-weight: bold;
 }
 
+.presentation p {
+    padding-top: 8px;
+}
+
 p {
     font-size: 16px;
 }
@@ -75,6 +79,7 @@ p {
     border: 1px #F2F2F2 solid;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+    box-sizing: border-box;
 }
 
 .fa-location-dot {
@@ -84,14 +89,21 @@ p {
 /* .search-bar {
     width: 377px;
     height: 49px;
-
+    display: flex;
+    flex-direction: row;
 } */
+
+.search-bar form {
+    display: flex;
+    flex-direction: row;
+}
 
 .search-bar input {
     width: 193px; 
     height: 49px;
     border: 1px #F2F2F2 solid;
     border-right: none;
+    box-sizing: border-box;
     padding: 0px;
 }
 
@@ -102,6 +114,7 @@ p {
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     border: 1px #0065FC solid;
+    box-sizing: border-box;
     color: #FFFFFF;
     font-size: 18px;
     font-weight: bold;
