--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,38 @@ h1 {
     color: #0065FC;
 }
 
+/****** Info-bar ******/
+
+.info-bar {
+    display: flex;
+    flex-direction: row;
+    font-size: 16px;
+    font-weight: 400;
+    height: 24px;
+}
+
+.info-bar p {
+    align-self: center;
+}
+
+.icone-info {
+    height: 24px;
+    width: 24px;
+    border: 1px #D9D9D9 solid;
+    border-radius: 50px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.icone-info i {
+    font-size: 10px;
+    color: #0065FC;
+}
+
+
 
 
 
