--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -1,3 +1,32 @@
+.section-title {
+    margin: 0;
+    font-size: 22px;
+}
+
+.card {
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.card img {
+    object-fit: cover;
+}
+
+.card-title {
+    font-size: 16px;
+}
+
+.euro {
+    font-weight: 700;
+}
+
+.neutral-star {
+    color: var(--main-bg-color)
+}
+
+
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
     display: flex;
@@ -14,6 +43,45 @@
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
+}
+
+.hebergements-cards {
+    display: flex;
+    flex-direction: column;
+}
+
+.hebergement-card-1, .hebergement-card-2 {
+    display: flex;
+    flex-direction: row;
+    padding-top: 30px;
+}
+
+.hebergement-card-1 .card, .hebergement-card-2 .card {
+    display: flex;
+    flex-direction: column;
+    width: 250.33px;
+    height: 207.25px;
+    box-sizing: border-box;
+}
+
+.hebergements-cards img{
+    height: 124px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.hebergements-cards .card {
+    display: flex;
+}
+
+.card-center {
+    margin: 0px 30px 0px 30px;
+}
+
+.afficher-plus {
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 30px;
 }
 
 /****** Populaires ***********/
