--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ a {
 p {
     font-size: 16px;
     font-weight: 400;
+    color: #000000;
 }
 
 /****** Section Info-group ******/
@@ -225,34 +226,6 @@ h1 {
 
 
 
-
-.section-title {
-    margin: 0;
-    font-size: 22px;
-}
-
-.card {
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-}
-
-.card img {
-    object-fit: cover;
-}
-
-.card-title {
-    font-size: 16px;
-}
-
-.euro {
-    font-weight: 700;
-}
-
-.neutral-star {
-    color: var(--main-bg-color)
-}
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
