--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -16,6 +16,7 @@
 
 .card-title {
     font-size: 16px;
+    font-weight: 700;
 }
 
 .euro {
@@ -53,7 +54,8 @@
 .hebergement-card-1, .hebergement-card-2 {
     display: flex;
     flex-direction: row;
-    padding-top: 30px;
+    justify-content: space-between;
+    margin-top: 33px;
 }
 
 .hebergement-card-1 .card, .hebergement-card-2 .card {
@@ -70,19 +72,33 @@
     border-top-right-radius: 20px;
 }
 
-.hebergements-cards .card {
+.hebergements-cards .card-content {
+    /* width: 67%; */
+    padding-left: 15px;
     display: flex;
-}
-
-.card-center {
-    margin: 0px 30px 0px 30px;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    box-sizing: border-box;
 }
 
 .afficher-plus {
     font-size: 18px;
     font-weight: 700;
-    padding-top: 30px;
+    margin-top: 30px;
 }
+
+.hebergements-cards .card-title {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.hebergements-cards .card-subtitle {
+    margin: 0;
+}
+
+/* .hebergements-cards .card-rating {
+    margin-bottom: 10px;
+} */
 
 /****** Populaires ***********/
 .populaires {
