creation of activites section and anchor for menu

--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -32,6 +32,7 @@
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 35px;
 }
 
 .hebergements-and-populaires section {
