--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header {
 }
 
 .nav-header a {
-    margin: 0px 0px 0px 69px;
+    margin: 0px 0px 0px 68px;
     font-size: 16px;
 }
 
@@ -223,8 +223,35 @@ h1 {
     color: #0065FC;
 }
 
+footer {
+    background-color: var(--main-bg-color);
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
+    margin-top: 35px;
+}
 
+.div-footer {
+    width: 33.33%;
+}
 
+.nav-footer {
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
+}
+
+.title-footer{
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.nav-footer a {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
 
 
 
