--- a/css/style.css
+++ b/css/style.css
@@ -15,24 +15,41 @@
 header {
     display: flex;
     justify-content: space-between;
-    padding: 16px 0px 16px 0px;
+    padding: 0px 0px 16px 0px;
+}
+
+.nav-header ul {
+    display: flex;
+    margin: 0px;
+    padding-left: 0px;
+
+}
+
+.nav-header li {
+    margin: 0px 0px 0px 68px;
+    font-size: 16px;
+    display: flex;
+    flex-direction: row;
+
+    /* margin-top: 16px; */
 }
 
 .nav-header a {
-    margin: 0px 0px 0px 68px;
-    font-size: 16px;
+    padding-top: 16px;
 }
 
 .nav-header a:hover {
     color: #0065FC;
     border-top: 2px solid #0065FC;
+    /* padding-top: 14px;
+    margin-top: 0px; */
     padding-top: 14px;
 }
 
 header img {
     width: 61.09px;
     height: 19px;
-    padding: 14px 0px 14px 0px;
+    padding: 30px 0px 14px 0px;
 }
 
 
