--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,12 @@ h1 {
     font-weight: 700;
 }
 
-.presentation p {
+.presentation-site p {
     padding-top: 8px;
+}
+
+.presentation-site h1 {
+    margin-top: 30px;
 }
 
 
@@ -110,6 +114,7 @@ h1 {
     display: flex;
     flex-direction: row;
     height: 49px;
+    margin: 35px 0px 35px 0px;
 }
 
 .icone-position {
@@ -127,6 +132,7 @@ h1 {
 
 .fa-location-dot {
     color: #000000;
+    font-size: 18px;
 }
 
 .search-bar form {
@@ -135,16 +141,18 @@ h1 {
 }
 
 .search-bar input {
-    width: 193px; 
+    /* width: 194px;  */
     height: 49px;
     border: 1px #F2F2F2 solid;
     border-right: none;
     box-sizing: border-box;
-    padding: 0px;
+    padding: 0px 20px 0px 20px;
 }
 
 .search-bar button {
     width: 132px;
+    /* width: 100%;
+    padding: 0px 35px 0px 35px; */
     height: 49px;
     background-color: #0065FC;
     border-top-right-radius: 15px;
@@ -160,7 +168,7 @@ h1 {
     color: #000000; 
     font-size: 18px;
     font-weight: bold;
-    padding: 0px 24px 0px 24px; 
+
 }
 
 /****** Filters ******/
@@ -176,6 +184,7 @@ h1 {
     font-weight: 700;
     display: flex;
     align-items: center;
+    padding: 0px
 }
 
 .nav-filters {
@@ -207,6 +216,7 @@ h1 {
 .filters i {
     padding-right: 10px;
     color: #0065FC;
+
 }
 
 /****** Info-bar ******/
@@ -335,7 +345,7 @@ footer {
     }
 
     .search-bar input {
-        width: 278px; 
+        /* width: 278px;  */
         height: 49px;}
 
     .submit {
