--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ body {
 a {
     color: inherit;
     text-decoration: none;
+    cursor: pointer;
+
 }
 
 p {
@@ -84,10 +86,6 @@ p {
 
 /****** Section Info-group ******/
 /****** Presentation ******/
-
-.presentation {
-    margin-top: 30px;
-}
 
 .presentation-site div {
     margin-bottom: 35px;
@@ -106,7 +104,6 @@ h1 {
 .presentation-site h1 {
     margin-top: 30px;
 }
-
 
 /****** Search Bar ******/
 
@@ -162,6 +159,7 @@ h1 {
     color: #FFFFFF;
     font-size: 18px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 ::placeholder {
@@ -205,7 +203,7 @@ h1 {
     box-sizing: border-box;
     border: 2px rgba(217, 217, 217, 1) solid;
     border-radius: 25px;
-    padding: 4px 19px 4px 19px;
+    padding: 4px 17px 4px 17px;
     margin-left: 15px;
 }
 
@@ -216,7 +214,7 @@ h1 {
 .filters i {
     padding-right: 10px;
     color: #0065FC;
-
+    font-size: 22px;
 }
 
 /****** Info-bar ******/
@@ -231,6 +229,9 @@ h1 {
 
 .info-bar p {
     align-self: center;
+    padding: 4px 0px 4px 0px;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .icone-info {
