--- a/css/style.css
+++ b/css/style.css
@@ -186,12 +186,14 @@ h1 {
     font-weight: 700;
     display: flex;
     align-items: center;
-    padding: 0px
+    padding: 0px;
+    margin-right: 15px;
 }
 
 .nav-filters {
     display: flex;
     flex-direction: row;
+    height: 50px;
 }
 
 .nav-filters p {
@@ -208,7 +210,7 @@ h1 {
     border: 2px rgba(217, 217, 217, 1) solid;
     border-radius: 25px;
     padding: 4px 17px 4px 17px;
-    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .filters-button:hover {
@@ -286,49 +288,31 @@ footer {
 }
 
 
-
 /* Le code ci-dessous correspond à la version responsive uniquement */
-
 /****** Media queries ***********/
-/* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
-    .hebergements-and-populaires {
-        flex-direction: column;
-    }
-
-    .hebergements {
-        width: 100%;
-    }
-
-    .populaires {
-        width: 100%;
-        margin-top: 50px;
-    }
-
-    .populaires-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .populaires-cards a {
-        width: 30%;
-    }
-
-    .populaires-cards .card-title {
-        font-size: 14px;
-    }
-
-    .populaires-cards .card-subtitle {
-        font-size: 13px;
-    }
-}
 
 /* Media query pour les écrans de taille desktop */
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 767.98px) {
     /* Cacher l'icône de loupe sur les écrans de taille desktop */
     .fa-magnifying-glass {
         display: none;
+    }
+}
+
+/* Medium devices (tablets, less/equal than 1024px) */
+@media (max-width: 1024px) {
+
+    .filters {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .p-filters {
+        margin-bottom: 20px;
+    }
+
+    .info-bar {
+        padding-top: 30px;
     }
 }
 
