--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -158,6 +158,11 @@
         width: 100%;
     }
 
+    .hebergements .card {
+        width: 268px;
+        height: 207.25px;
+    }
+
     .populaires {
         width: 100%;
         margin-top: 50px;
@@ -166,11 +171,14 @@
     .populaires-cards {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
+        align-items: stretch;
+        gap: 20px;
     }
 
     .populaires-cards a {
-        width: 30%;
+        /* width: 30%; */
+        flex: calc(33% - 14px) 1 1;
     }
 
     .populaires-cards .card-title {
