--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,9 @@ p {
 /****** Section Info-group ******/
 /****** Presentation ******/
 
-.presentation-site div {
+/* .presentation-site div {
     margin-bottom: 35px;
-}
+} */
 
 h1 {
     color: #000000;
@@ -179,6 +179,7 @@ h1 {
     display: flex;
     flex-direction: row;
     height: 50px;
+    margin-bottom: 35px;
 }
 
 .filters p {
@@ -231,6 +232,7 @@ h1 {
     font-size: 16px;
     font-weight: 400;
     height: 24px;
+    margin-bottom: 35px;
 }
 
 .info-bar p {
@@ -311,8 +313,14 @@ footer {
         margin-bottom: 20px;
     }
 
+
+    .nav-filters p {
+        font-size: 16px;
+        margin:0;
+    }
+
     .info-bar {
-        padding-top: 30px;
+        padding-top: 35px;
     }
 }
 
