--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -172,12 +172,11 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        align-items: stretch;
+        /* align-items: stretch; */
         gap: 20px;
     }
 
     .populaires-cards a {
-        /* width: 30%; */
         flex: calc(33% - 14px) 1 1;
     }
 
