--- a/css/activites.css
+++ b/css/activites.css
@@ -4,19 +4,22 @@
     padding: 30px;
 }
 
-
 .activites-cards {
     display: flex;
     flex-direction: row;
     margin-top: 30px;
     justify-content: space-between;
     box-sizing: border-box;
+    gap: 30px;
 } 
+
+.activites-cards a {
+    width:20%;
+    flex-grow: 1;
+}
 
 .activites-cards .card {
     padding: 0px;
-    height: 439px;
-    justify-content: space-around;
     box-sizing: border-box;
 }
 
@@ -34,11 +37,10 @@
 }
 
 .activites-cards img {
-    width: 297.5px;
+    width: 100%;
     height: 380px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    box-sizing: border-box;
 }
 
 
