--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ header {
     font-size: 16px;
     display: flex;
     flex-direction: row;
-
 }
 
 .nav-header a {
@@ -145,8 +144,6 @@ h1 {
 
 .search-bar button {
     width: 132px;
-    /* width: 100%;
-    padding: 0px 35px 0px 35px; */
     height: 49px;
     background-color: #0065FC;
     border-top-right-radius: 15px;
@@ -179,13 +176,16 @@ h1 {
     margin-bottom: 35px;
 }
 
+.p-filters {
+    margin-right: 15px;
+}
+
 .filters p {
     font-size: 18px;
     font-weight: 700;
     display: flex;
     align-items: center;
     padding: 0px;
-    margin-right: 15px;
 }
 
 .nav-filters {
@@ -209,6 +209,8 @@ h1 {
     border-radius: 25px;
     padding: 4px 17px 4px 17px;
     margin-right: 15px;
+    background-color: var(--filter-bg-color);
+    cursor: pointer;
 }
 
 .filters-button:hover {
