--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
+    --black: #000000;
+    --white: #ffffff;
 }
 
 /****** Header ******/
@@ -37,8 +39,8 @@ header {
 }
 
 .nav-header a:hover {
-    color: #0065FC;
-    border-top: 2px solid #0065FC;
+    color: var(--main-color);
+    border-top: 2px solid var(--main-color);
     padding-top: 14px;
 }
 
@@ -77,7 +79,7 @@ a {
 p {
     font-size: 16px;
     font-weight: 400;
-    color: #000000;
+    color: var(--black);
 }
 
 /****** Section Info-group ******/
@@ -88,7 +90,7 @@ p {
 } */
 
 h1 {
-    color: #000000;
+    color: var(--black);
     font-size: 22px;
     font-weight: 700;
 }
@@ -116,15 +118,15 @@ h1 {
     align-items: center;
     width: 50px;
     height: 49px;
-    background-color: #F2F2F2;
-    border: 1px #F2F2F2 solid;
+    background-color: var(--main-bg-color);
+    border: 1px var(--main-bg-color) solid;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     box-sizing: border-box;
 }
 
 .fa-location-dot {
-    color: #000000;
+    color: var(--black);
     font-size: 18px;
 }
 
@@ -134,9 +136,8 @@ h1 {
 }
 
 .search-bar input {
-    /* width: 194px;  */
     height: 49px;
-    border: 1px #F2F2F2 solid;
+    border: 1px var(--main-bg-color) solid;
     border-right: none;
     box-sizing: border-box;
     padding: 0px 20px 0px 20px;
@@ -145,12 +146,12 @@ h1 {
 .search-bar button {
     width: 132px;
     height: 49px;
-    background-color: #0065FC;
+    background-color: var(--main-color);
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    border: 1px #0065FC solid;
+    border: 1px var(--main-color) solid;
     box-sizing: border-box;
-    color: #FFFFFF;
+    color: var(--white);
     font-size: 18px;
     font-weight: bold;
     cursor: pointer;
@@ -161,10 +162,9 @@ h1 {
 }
 
 ::placeholder {
-    color: #000000; 
+    color: var(--black); 
     font-size: 18px;
     font-weight: bold;
-
 }
 
 /****** Filters ******/
@@ -205,21 +205,21 @@ h1 {
     align-items: center;
     height: 50px;
     box-sizing: border-box;
-    border: 2px rgba(217, 217, 217, 1) solid;
+    border: 2px var(--main-bg-color) solid;
     border-radius: 25px;
     padding: 4px 17px 4px 17px;
     margin-right: 15px;
-    background-color: var(--filter-bg-color);
+    background-color: var(--white);
     cursor: pointer;
 }
 
 .filters-button:hover {
-    background-color: #DEEBFF;
+    background-color: var(--filter-bg-color);
 }
 
 .filters i {
     padding-right: 10px;
-    color: #0065FC;
+    color: var(--main-color);
     font-size: 22px;
 }
 
@@ -255,7 +255,7 @@ h1 {
 
 .icone-info i {
     font-size: 10px;
-    color: #0065FC;
+    color: var(--main-color);
 }
 
 footer {
@@ -333,24 +333,22 @@ footer {
     /* ... */
     .fa-magnifying-glass {
         visibility: visible;
-        color: #FFFFFF;
+        color: var(--white);
     }
 
     .search-bar button {
         width: 49px;
         height: 49px;
-        background-color: #0065FC;
+        background-color: var(--main-color);
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
-        border: 1px #0065FC solid;
+        border: 1px var(--main-color) solid;
     }
 
     .search-bar input {
-        /* width: 278px;  */
         height: 49px;}
 
     .submit {
         display: none;
-        /* visibility: hidden; */
     }
 }
