--- a/css/style.css
+++ b/css/style.css
@@ -262,18 +262,16 @@ footer {
     background-color: var(--main-bg-color);
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     padding-top: 20px;
     margin-top: 35px;
 }
 
-.div-footer {
-    width: 33.33%;
-}
-
 .nav-footer {
+    width: 33%;
     display: flex;
     flex-direction: column;
-    padding-left: 15px;
+    padding-left: 20px;
 }
 
 .title-footer{
