--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,7 @@ p {
 /****** Section Info-group ******/
 /****** Presentation ******/
 
-/* .presentation-site div {
-    margin-bottom: 35px;
-} */
+
 
 h1 {
     color: var(--black);
@@ -329,6 +327,54 @@ footer {
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     /* ... */
+
+    .main-container {
+        padding: 0px;
+    }
+
+    /* Header */
+
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header img {
+        align-self: center;
+        padding: 30px 0px;
+    }
+
+    .nav-header ul {
+        width: 100%;
+        padding: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav-header li {
+        display:flex;
+        justify-content: center;
+        width: 50%;
+        margin-left: 0px;
+        padding: 0px 0px 17px 0px;
+    }
+
+    .nav-header li:hover {
+        padding : 0px 0px 15px 0px;
+        border-bottom: 2px var(--main-color) solid;
+    }
+
+    .nav-header a {
+        padding: 0px;
+    }
+
+    .nav-header a:hover {
+        text-decoration: none;
+        border-top: none;
+        padding-top: 0px;
+    }
+
     .fa-magnifying-glass {
         visibility: visible;
         color: var(--white);
