--- a/css/activites.css
+++ b/css/activites.css
@@ -63,3 +63,16 @@
 }
 
 }
+
+
+/* Small devices (phones, less than 768px) */
+@media (max-width: 767.98px) {
+    /* ... */
+
+    .activites-cards {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+}
