--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ h1 {
     /* height: 50px; */
 }
 
-.nav-filters button {
+.filters-button {
     font-size: 17px;
     font-weight: 700;
 }
@@ -320,7 +320,7 @@ footer {
     }
 
 
-    .nav-filters p {
+    .filters-button {
         font-size: 16px;
         margin:0;
     }
@@ -430,11 +430,10 @@ footer {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-
         gap: 20px 10px;
     }
 
-    .nav-filters p {
+    .filters-button {
         font-size: 14px;
     }
 
