--- a/css/activites.css
+++ b/css/activites.css
@@ -31,7 +31,7 @@
 
 .title-photo {
     display: flex;
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 700;
     padding-left: 20px;
 }
