deletion of a height from an activity card

--- a/css/activites.css
+++ b/css/activites.css
@@ -58,10 +58,9 @@
         height: 270px;
     }
 
-    .activites-cards .card-content {
+    /* .activites-cards .card-content {
         height: 70px;
-    }
-
+    } */
 }
 
 
