--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -171,6 +171,10 @@
         margin-top: 50px;
     }
 
+    .populaires-cards a {
+        flex: calc(33% - 14px) 1 1;
+    }
+
     .populaires-cards {
         display: flex;
         flex-direction: row;
