--- a/css/style.css
+++ b/css/style.css
@@ -111,8 +111,16 @@ footer {
     list-style-type: none;
 }
 
-
 /****** Media queries ******/
+/* Medium devices (tablets, less/equal than 1024px) */
+@media (max-width: 1024px) {
+    .nav-header a:active {
+        color: var(--main-color);
+        border-top: 2px solid var(--main-color);
+        padding-top: 14px;
+    }
+}
+
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     .main-container {
@@ -136,7 +144,6 @@ footer {
     }
 
     .nav-header li {
-        /* display:flex; */
         justify-content: center;
         width: 50%;
         margin-left: 0px;
