moving the fa-solid class to info.css

--- a/css/info.css
+++ b/css/info.css
@@ -173,6 +173,10 @@ h1 {
         padding: 0px 20px;
     }
 
+    .fa-solid {
+        color: var(--main-color);
+    }
+
     /****** Search Bar ******/
     .search-bar {
         max-width: 377px;
