--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,28 @@
     display: flex;
 }
 
+body {
+    justify-content: center;
+}
+
+.main-container {
+    flex-direction: column;
+    width: 100%;
+    max-width: 1440px;
+    padding: 0px 50px;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+p {
+    font-size: 1em;
+    font-weight: 400;
+    color: var(--black);
+}
+
 /****** Header ******/
 header {
     justify-content: space-between;
@@ -53,33 +75,7 @@ header img {
     padding: 30px 0px 14px 0px;
 }
 
-/****** Body ******/
-.fa-solid {
-    color: var(--main-color);
-}
-
-body {
-    justify-content: center;
-}
-
-.main-container {
-    flex-direction: column;
-    width: 100%;
-    max-width: 1440px;
-    padding: 0px 50px;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-p {
-    font-size: 1em;
-    font-weight: 400;
-    color: var(--black);
-}
-
+/****** Footer ******/
 footer {
     background-color: var(--main-bg-color);
     flex-direction: row;
